<resources>
    <string name="app_name">My Application</string>
    <string name="login_button_text">Login</string>
    <string name="login_register_text">Register</string>
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_edit_password_text">Enter your password</string>
    <string name="login_edit_username_text">Enter your username</string>
    <string name="login_text">Login</string>
    <string name="next_button">Next -></string>
    <string name="previous_button"> $lt- Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topEventsDesc">In a small village nestled between the mountains, there lived a curious cat named Whiskers. Every day, Whiskers would explore the lush green fields a nd the sparkling streams that</string>
    <string name="eventCardDesc">Join us for an engaging and thought-provoking event as we delve into the recent assassination attempt on President Donald Trump. This discussion will explore the political, social</string>
    <string name="title_activity_service_create">activity_service_create</string>
    <string name="title_activity_service_details">ServiceDetailsActivity</string>
</resources>