<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8DDB5"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/stillwater_black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username_text"
        android:textColor="#1B1B1B"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_username_text"
        android:backgroundTint="#1B1B1B"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_text"
        android:textColor="#1B1B1B"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_password_text"
        android:inputType="textPassword"
        android:backgroundTint="#1B1B1B"
        android:padding="8dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register_text"
        android:textColor="#1B1B1B"
        android:layout_gravity="end"
        android:textSize="14sp"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:background="@color/freaky_green"
        android:textColor="#FFFFFF"
        android:padding="4dp"
        android:id="@+id/login_button"/>

</LinearLayout>
